# price-monitor-pipeline

./: .gitignore  README.md  pyproject.toml
examples/: watchlist.json
outputs/sample_report/: alerts.csv  price_monitor_report.typ  snapshot.csv
src/price_monitor_pipeline/: __init__.py  __main__.py  cli.py  models.py  monitor.py  reporting.py
tests/: test_cli.py  test_monitor.py  test_reporting.py
tests/fixtures/: product_page.html
