[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-monitor-pipeline"
version = "0.1.0"
description = "Python pipeline for tracking public product prices and generating clean alert reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emir Huseyin Inci" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pandas>=2.1",
    "pydantic>=2.6",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
monitor-prices = "price_monitor_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=price_monitor_pipeline --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.coverage.run]
omit = [
    "src/price_monitor_pipeline/__main__.py",
]
